web/css/review-form.css
.validator {
  --validator-height: 8rem;
  height: var(--validator-height);
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
}

.sentence-box {
  margin: 0 1rem;
  padding: 0 1rem;
  height: 5rem;
  border: 1px solid var(--grey-color);
  flex-basis: 100%;
  line-height: 1rem;
  justify-content: center;
  align-items: center;
  display: flex;
}

.validator li {
  height: calc(var(--validator-height) / 2);
  line-height: calc(var(--validator-height) / 2);
}

.button-group {
  width: 6rem;
}

.button-group.small {
  width: 2.5rem;
}

.validator label {
  box-sizing: border-box;
  width: 100%;
  height: 2.3rem;
  line-height: 2.3rem;
}

.validator input[type="radio"] {
  transform: scale(1.75);
  margin: 0 0.5rem;
}

.validator .button-group input[type="radio"] {
  display: none;
}

.validator .button-group input[type="radio"] + label {
  border: 1px solid;
  margin: 0.2rem 0;
  text-align: center;
  cursor: pointer;
  box-shadow: var(--button-box-shadow);
}

.validator .yes-button {
  border-color: var(--deactive-color);
}

.validator .yes-button {
  border-color: var(--deactive-color);
}

.validator .button-group input[type="radio"]:checked + label {
  background-color: var(--deactive-color);
}

.validator .button-group input[type="radio"]:checked + label.yes-button {
  background-color: var(--success-color);
}

.validator .button-group input[type="radio"]:checked + label.no-button {
  background-color: var(--warning-color);
}

.pager-container {
  text-align: center;
}

.pager {
  padding: 0.5rem 0.5rem;
  margin: 0 1rem;
  width: 2rem;
  display: inline-block;
  text-align: center;
  cursor: pointer;
  border: 1px solid var(--main-font-color);
  border-radius: 2px;
  background-color: transparent;
  color: var(--main-font-color);
}

.pager:hover {
  background-color: gray;
}

.pager:active {
  background-color: red;
}

.pager.active {
  opacity: 0.8;
  pointer-events: none;
  text-decoration: none;
  border-color: var(--deactive-color);
  box-shadow: none;
}

